add media query examples

--- a/media-query-site.html
+++ b/media-query-site.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link href="css/stylesheet" type="text/css" media="all">
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <title>Media Queries</title>
   </head>
   <body>
@@ -12,7 +12,7 @@
     <div class="column">
       <p>Using media queries and responsive design ensures the site looks great no matter <em>how</em> the user is viewing it. We can also determine how a webpage will print out.</p>
     </div>
-    <div class="colmn">
+    <div class="column">
       <p>Basically, media queries is awesome</p>
     </div>
   </body>
